# CMakeProcessControl

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/maths/: CMakeLists.txt  maths.cpp  maths.h
